apps/console/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: PROJECT_NAME
  namespace: APP_NAMESPACE
spec:
  selector:
    app: PROJECT_NAME
  ports:
    - name: http
      port: 80
      targetPort: 3000
    - name: ws
      port: 3001
      targetPort: 3001
